--- a/index.html
+++ b/index.html
@@ -143,6 +143,25 @@
     </section>
     <!--::banner part start::-->
 
+    <!--::Browse All Categories of Our Service:: -->
+    <section class="subscribe_part padding_bottom">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="subscribe_part_text text-center">
+			    <h2>Introducing EmpowerPay: Simplifying Transactions, Amplifying Growth</h2>
+                        <h4>EmpowerPay is a cutting-edge platform designed to empower Point of Sales Agents, individuals, and small business owners to manage and record transactions efficiently, sell virtual cards, and grow their business with confidence.</h4>
+                        <a href="#" class="btn_3 genric-btn primary radius"><strong>Learn More</strong></a>
+                        <a href="https://wa.me/+2347083682007" class="btn_3 genric-btn info radius"><strong>Contact Us</strong></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="img/animate_icon/Ellipse_5.png" alt="" class="feature_icon_2 custom-animation2">
+    </section>
+    <!--::Browse all categories of our service part end::-->
+
+	
     <!--::use sasu part end::-->
     <section class="use_sasu padding_top">
         <div class="container">
