--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             Discover our comprehensive IT solutions. From software development to project design and website solutions, with how we use no-code tools to simplify your tech needs. Let's collaborate on your success.</p>
                             <a href="https://calendly.com/lemmaiot/consultants" class="btn_3 genric-btn primary circle"><strong>Book a Consultation</strong></a> <b>&nbsp;</b></b>
                             <a href="hire_service_embed.html" class="genric-btn info circle"><strong>Request a Service</strong></a> <b>&nbsp;</b>  
-				            <a href="https://paystack.com/pay/lemmaiot" class="genric-btn success circle"><strong>Make a Payment</strong></a>
+				<a href="https://paystack.com/pay/lemmaiot" class="genric-btn success circle"><strong>Make a Payment</strong></a>
                         </div>
                     </div>
                 </div>
@@ -148,10 +148,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="subscribe_part_text text-center">
-			    <h2>Introducing EmpowerPay: Simplifying Transactions, Amplifying Growth</h2>
-                        <h4>EmpowerPay is a cutting-edge platform designed to empower Point of Sales Agents, individuals, and small business owners to manage and record transactions efficiently, sell virtual cards, and grow their business with confidence.</h4>
-                        <a href="#" class="btn_3 genric-btn primary radius"><strong>Learn More</strong></a>
-                        <a href="https://wa.me/+2347083682007" class="btn_3 genric-btn info radius"><strong>Contact Us</strong></a>
+			    <h2>Introducing Platform to Empower Your Journey with Intelligent Solutions - <a href="https://graceai.glide.page">Graceful AI</a></h2>
+                        <h4>Discover a platform designed to simplify learning, enhance creativity, and provide expert insights—all tailored to your needs. Whether you're here to learn, create, or grow, Graceful AI is your gateway to smarter, faster, and better outcomes.</h4>
+                        <a href="https://graceai.glide.page" class="btn_3 genric-btn primary radius"><strong>Explore Graceful AI</strong></a>
+                        <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Social Media Post Generator</strong></a>
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
 					<div class="col-md-7 mt-sm-20">
                         <h2>Smart<br>
                             AI Chat Bot</h2>
-						<p>Enhance customer engagement with a chatbot that answers questions about your business. Whether it's integrated into your website or hosted independently, we will train the chatbot to respond in your unique voice. Plus, we'll help you track its performance to gain deeper insights into your business.</p>
+			<p>Enhance customer engagement with a chatbot that answers questions about your business. Whether it's integrated into your website or hosted independently, we will train the chatbot to respond in your unique voice. Plus, we'll help you track its performance to gain deeper insights into your business.</p>
                         <a href="chatbot_embed.html" class="btn_3 genric-btn info-border circle"><strong>See how it Works</strong></a>
                         <a href="https://airtable.com/appSsUylm9F7h35Pu/shrUPkfhp35Oogdvd" class="genric-btn info circle">Get your Chatbot</a>
 					</div>
@@ -280,11 +280,11 @@
                             <p>We have come up with different offers and platform that make our work faster and your thinking easier. Our Package includes;
                             <a href="branding.html" style="color: darkslateblue">Publishing and Designs</a>,
                             <a href="automation.html" style="color: darkslateblue">Document Automation</a>,
-                            <a href="https://getmycf.carrd.co" style="color: darkslateblue">Profile Website</a>,
+                            <a href="https://profilewebsite.crd.co" style="color: darkslateblue">Profile Website</a>,
                             <a href="software.html" style="color: darkslateblue">Software</a> for any devices,
                             <a href="spreadsheet.html" style="color: darkslateblue">Spreadsheet Solution</a> for business,
                             <a href="website.html" style="color: darkslateblue">Corporate Website</a> and
-                            <a href="#" style="color: darkslateblue">Lot More...</a></p>
+                            <a href="services.html" style="color: darkslateblue">Lot More...</a></p>
                                 <a href="hire_service_embed.html" class="btn_3 genric-btn primary radius"><strong>Get Started Today</strong></a>
                         </div>
                         <div class="review_part_text">
@@ -410,7 +410,7 @@
                         <h4>Our Tools</h4>
                         <ul class="list-unstyled">
                             <li><a href="https://unacct.glideapp.io">Ease Accounting</a></li>
-                            <li><a href="#">Digital Business</a></li>
+                            <li><a href="https://profilewebsite.crd.co">Profile Website</a></li>
                             <li><a href="#">Recharge Card</a></li>
                             <li><a href="https://graceai.glide.page">GraceAI Tools</a></li>
                             <li><a href="https://forms.gle/eMqRd7YTfwBnTSoZ6">Complain Box</a></li>
@@ -438,7 +438,7 @@
                             <li><a href="https://airtable.com/shrIjeQhRE5MLMJnw">Desktop Publishing</a></li>
                             <li><a href="https://airtable.com/shrp0W2ho4oiycnbN">Spreadsheet Service</a></li>
                             <li><a href="https://airtable.com/shrvOOksWAwb8pY6W">Software Solution</a></li>
-                            <li><a href="https://getmycf.carrd.co">Profile Website</a></li>
+                            <li><a href="profile_website.html">Profile Website</a></li>
                             <li><a href="https://airtable.com/shrxQ0dlmzLgDBBW2">File Automation</a></li>
                         </ul>
                     </div>
