--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="subscribe_part_text text-center">
-			    <h2>Introducing Platform to Empower Your Journey with Intelligent Solutions - <a href="https://graceai.glide.page">Graceful AI</a></h2>
-                        <h4>Discover a platform designed to simplify learning, enhance creativity, and provide expert insights—all tailored to your needs. Whether you're here to learn, create, or grow, Graceful AI is your gateway to smarter, faster, and better outcomes.</h4>
+			    <h2>Introducing Platform to Empower Your Journey with Intelligent Solutions - <a href="https://graceai.glide.page" style="color: darkslateblue">Graceful AI</a></h2>
+                        <h4>Discover a platform designed to simplify learning, enhance creativity, and provide expert insights—all tailored to your needs. Whether you're here to learn, create, or grow, Graceful AI is your gateway to smarter, faster, and better outcomes.</h4><br><br>
                         <a href="https://graceai.glide.page" class="btn_3 genric-btn primary radius"><strong>Explore Graceful AI</strong></a>
                         <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Social Media Post Generator</strong></a>
                     </div>
