--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="subscribe_part_text text-center">
-			    <h2>Introducing Platform to Empower Your Journey with Intelligent Solutions - <a href="https://graceai.glide.page" style="color: darkslateblue">Graceful AI</a></h2>
-                        <h4>Discover a platform designed to simplify learning, enhance creativity, and provide expert insights—all tailored to your needs. Whether you're here to learn, create, or grow, Graceful AI is your gateway to smarter, faster, and better outcomes.</h4><br><br>
-                        <a href="https://graceai.glide.page" class="btn_3 genric-btn primary radius"><strong>Explore Graceful AI</strong></a>
-                        <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Social Media Post Generator</strong></a>
+			    <h2>Introducing: Social Media Post Generator - <a href="https://graceai.glide.page" style="color: darkslateblue">LemmaIoT Client Portal</a></h2>
+                        <h4>Say goodbye to the struggle of crafting social media posts! Our Social Media Post Generator is here to take the stress out of creating engaging, audience-focused content for your social media pages. Whether you're promoting your brand, launching a product, or simply connecting with your audience, we’ve got you covered.</h4><br><br>
+                        <a href="https://lemmaiot.glide.page" class="btn_3 genric-btn info radius"><strong>Generate Your Post Now!</strong></a>
+                        <a href="https://airtable.com/appSsUylm9F7h35Pu/shrzeZEB5sxee0hrT" class="btn_3 genric-btn primary radius"><strong>Get Access Today!</strong></a>
                     </div>
                 </div>
             </div>
