--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         />
         <meta
             property="og:image"
-            content="https://lemmaiot.com.ng/images/index-meta.jpg"
+            content="https:/assets/images/index-meta.jpg"
         />
         <meta property="og:site_name" content="LemmaIoT" />
         <meta property="og:locale" content="en_NG" />
@@ -61,7 +61,7 @@
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="/assets/images/fav.png" />
-        <link rel="apple-touch-icon" href="https:/assets/images/fav.png" />
+        <link rel="apple-touch-icon" href="/assets/images/fav.png" />
 
         <!-- Additional SEO Meta Tags -->
         <meta name="geo.region" content="NG" />
