--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         />
         <meta
             property="og:image"
-            content="https:/assets/images/index-meta.jpg"
+            content="https://lemmaiot.com.ng/images/index-meta.jpg"
         />
         <meta property="og:site_name" content="LemmaIoT" />
         <meta property="og:locale" content="en_NG" />
@@ -52,7 +52,7 @@
         />
         <meta
             property="twitter:image"
-            content="https:/assets/images/index-meta.jpg"
+            content="https://lemmaiot.com.ng/images/index-meta.jpg"
         />
 
         <!-- PWA (Progressive Web App) -->
